force-app/main/default/staticresources/python/Disappear/src/objects/r20mig__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Migrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FromEmailAddress__c</fullName>
        <label>FromEmailAddress</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromFederationId__c</fullName>
        <label>FromFederationId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromProfile__c</fullName>
        <description>we cannot create a link to profile object
so copy the name of the profile in this field</description>
        <label>From Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rel_2_0_migration_tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToEmailAddress__c</fullName>
        <label>ToEmailAddress</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToFederationId__c</fullName>
        <label>ToFederationId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToFprPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To FPR Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToProfile__c</fullName>
        <label>To Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rel_2_0_migration_tools1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fromContactFedId__c</fullName>
        <formula>text(fromContact__r.Federation_Identifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fromContactFedId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fromContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>from Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rel 2.0 migration tools</relationshipLabel>
        <relationshipName>Rel_2_0_migration_tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>toContactFedId__c</fullName>
        <formula>text(toContact__r.Federation_Identifier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>toContactFedId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>toContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rel 2.0 migration tools (to Contact)</relationshipLabel>
        <relationshipName>Rel_2_0_migration_tools1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rel 2.0 migration tools</label>
    <listViews>
        <fullName>All</fullName>
        <columns>isSelected__c</columns>
        <columns>FromUser__c</columns>
        <columns>FromProfile__c</columns>
        <columns>FromFederationId__c</columns>
        <columns>fromContactFedId__c</columns>
        <columns>FromEmailAddress__c</columns>
        <columns>fromContact__c</columns>
        <columns>ToUser__c</columns>
        <columns>ToProfile__c</columns>
        <columns>ToFprPortalUser__c</columns>
        <columns>ToEmailAddress__c</columns>
        <columns>ToFederationId__c</columns>
        <columns>toContactFedId__c</columns>
        <columns>toContact__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MergeToPlatform</fullName>
        <columns>isSelected__c</columns>
        <columns>FromUser__c</columns>
        <columns>FromProfile__c</columns>
        <columns>FromFederationId__c</columns>
        <columns>fromContactFedId__c</columns>
        <columns>toContactFedId__c</columns>
        <columns>toContact__c</columns>
        <columns>ToFederationId__c</columns>
        <columns>ToUser__c</columns>
        <columns>ToProfile__c</columns>
        <columns>FromEmailAddress__c</columns>
        <columns>fromContact__c</columns>
        <columns>ToFprPortalUser__c</columns>
        <columns>ToEmailAddress__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ToFprPortalUser__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Merge to Platform User</label>
    </listViews>
    <listViews>
        <fullName>Selected</fullName>
        <columns>isSelected__c</columns>
        <columns>FromUser__c</columns>
        <columns>FromProfile__c</columns>
        <columns>FromFederationId__c</columns>
        <columns>fromContactFedId__c</columns>
        <columns>FromEmailAddress__c</columns>
        <columns>fromContact__c</columns>
        <columns>ToUser__c</columns>
        <columns>toContact__c</columns>
        <columns>toContactFedId__c</columns>
        <columns>ToProfile__c</columns>
        <columns>ToFprPortalUser__c</columns>
        <columns>ToEmailAddress__c</columns>
        <columns>ToFederationId__c</columns>
        <columns>Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isSelected__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Selected</label>
    </listViews>
    <listViews>
        <fullName>To_Portal_User</fullName>
        <columns>isSelected__c</columns>
        <columns>FromUser__c</columns>
        <columns>FromProfile__c</columns>
        <columns>FromFederationId__c</columns>
        <columns>fromContactFedId__c</columns>
        <columns>fromContact__c</columns>
        <columns>FromEmailAddress__c</columns>
        <columns>ToUser__c</columns>
        <columns>ToProfile__c</columns>
        <columns>ToFprPortalUser__c</columns>
        <columns>ToEmailAddress__c</columns>
        <columns>ToFederationId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ToFprPortalUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>To Portal User</label>
    </listViews>
    <listViews>
        <fullName>To_Portal_User_Jann</fullName>
        <columns>isSelected__c</columns>
        <columns>FromUser__c</columns>
        <columns>FromProfile__c</columns>
        <columns>FromFederationId__c</columns>
        <columns>fromContactFedId__c</columns>
        <columns>fromContact__c</columns>
        <columns>FromEmailAddress__c</columns>
        <columns>ToUser__c</columns>
        <columns>ToProfile__c</columns>
        <columns>ToFprPortalUser__c</columns>
        <columns>ToEmailAddress__c</columns>
        <columns>ToFederationId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ToFprPortalUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FromUser__c</field>
            <operation>equals</operation>
            <value>005U0000002Ebv9IAC</value>
        </filters>
        <label>To Portal User - Jann</label>
    </listViews>
    <nameField>
        <displayFormat>mig-{00000}</displayFormat>
        <label>Rel 2.0 migration tools Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rel 2.0 migration tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>